--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -1,6 +1,6 @@
 ﻿<h1>Users</h1>
 <a routerLink="add" class="btn btn-sm btn-success mb-2">Add User</a>
-<table class="table table-striped">
+<table class="table table-striped" #table>
     <thead>
         <tr>
             <th style="width: 30%" [appSort]="users" data-order="desc" data-name="firstName">First Name</th>
@@ -10,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of users">
+        <tr class="drag-handle" *ngFor="let user of users">
             <td>{{user.firstName}}</td>
             <td>{{user.lastName}}</td>
             <td>{{user.username}}</td>
