--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -38,10 +38,10 @@
         </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
+        <button [disabled]="loading" class="btn btn-danger mr-1">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Save
         </button>
-        <a routerLink="/users" class="btn btn-link">Cancel</a>
+        <button routerLink="/users" class="btn btn-danger">Cancel</button>
     </div>
 </form>
