--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -1,6 +1,6 @@
 ﻿<h1>Users</h1>
-<a routerLink="add" class="btn btn-sm btn-success mb-2">Add User</a>
-<table class="table table-striped" #table>
+<button routerLink="add" class="btn btn-sm btn-danger mb-2">Add User</button>
+<table class="table table-striped table-bordered" #table>
     <thead>
         <tr>
             <th style="width: 30%" [appSort]="users" data-order="desc" data-name="firstName">First Name</th>
@@ -10,12 +10,12 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="drag-handle" *ngFor="let user of users">
+        <tr class="drag-handle" *ngFor="let user of users; let i=index;">
             <td>{{user.firstName}}</td>
             <td>{{user.lastName}}</td>
             <td>{{user.username}}</td>
             <td style="white-space: nowrap">
-                <a routerLink="edit/{{user.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
+                <button routerLink="edit/{{user.id}}" class="btn btn-sm btn-danger mr-1">Edit</button>
                 <button (click)="deleteUser(user.id)" class="btn btn-sm btn-danger btn-delete-user" [disabled]="user.isDeleting">
                     <span *ngIf="user.isDeleting" class="spinner-border spinner-border-sm"></span>
                     <span *ngIf="!user.isDeleting">Delete</span>
