--- a/src/styles.less
+++ b/src/styles.less
@@ -12,42 +12,111 @@ a { cursor: pointer; }
     box-sizing: content-box;
 }
 
-.background-radial-gradient {
-    background-color: hsl(218, 41%, 15%);
-    background-image: radial-gradient(650px circle at 0% 0%,
-        hsl(218, 41%, 35%) 15%,
-        hsl(218, 41%, 30%) 35%,
-        hsl(218, 41%, 20%) 75%,
-        hsl(218, 41%, 19%) 80%,
-        transparent 100%),
-      radial-gradient(1250px circle at 100% 100%,
-        hsl(218, 41%, 45%) 15%,
-        hsl(218, 41%, 30%) 35%,
-        hsl(218, 41%, 20%) 75%,
-        hsl(218, 41%, 19%) 80%,
-        transparent 100%);
+.gradient-custom-2 {
+  /* fallback for old browsers */
+  background: #fccb90;
+  
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  }
+  
+  @media (min-width: 768px) {
+  .gradient-form {
+  height: 100vh important;
+  }
   }
 
-  #radius-shape-1 {
-    height: 220px;
-    width: 220px;
-    top: -60px;
-    left: -130px;
-    background: radial-gradient(#44006b, #ad1fff);
-    overflow: hidden;
+  .btn {
+    color:white;
+    border: none;
   }
 
-  #radius-shape-2 {
-    border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
-    bottom: -60px;
-    right: -110px;
-    width: 300px;
-    height: 300px;
-    background: radial-gradient(#44006b, #ad1fff);
-    overflow: hidden;
+  .btn1 {
+    color:red;
+    border: none;
   }
 
-  .bg-glass {
-    background-color: hsla(0, 0%, 100%, 0.9) !important;
-    backdrop-filter: saturate(200%) blur(25px);
+  #div1 {
+    text-indent: 10px;
+}
+
+#div2 {
+  text-indent: 0px;
+}
+
+.whiteText
+{
+    color:white;
+    font-size: 30px;
+}
+.blackText
+{
+    color:black;
+    font-weight:bold;
+    font-size: 30px;
+}
+
+.bgcolor
+{
+background-color: #f9c1b1;
+background-image: linear-gradient(315deg, #f9c1b1 0%, #fb8085 74%);
+;
+}
+
+.bg1
+{
+  background-color: red;
+}
+
+a {
+  color:red;
+}
+
+a:link {
+  color: red;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+
+
+  @media (min-width: 769px) {
+  .gradient-custom-2 {
+  border-top-right-radius: .3rem;
+  border-bottom-right-radius: .3rem;
   }
+  }
+
+  ::-webkit-input-placeholder {
+    font-style: italic;
+ }
+
+
+
+//  @media (min-width: 100px) {
+//  .offset-md-6 {
+//      margin-left: 25%;
+//  }
+// }
+
+.offset-md-3 {
+    margin-left: 0%;
+}
+
+
+ .col-md-6 {
+  max-width: 100%;
+}
